Daemon send msg to Blockly, console.log

--- a/blockly/demos/generator/index.html
+++ b/blockly/demos/generator/index.html
@@ -38,7 +38,8 @@
       <block type="Connect_to_Server"></block>
       <block type="recv_device"></block>
       <block type="Ja_test_motor"></block>
-      <block type="math_change2"></block>
+      <block type="Ultrasound"></block>
+      <block type="Ultrasound_value"></block>
     </category>
     <category name="Logic">
       <block type="controls_if"></block>
@@ -68,6 +69,7 @@
       <block type="text"></block>
       <block type="text_length"></block>
       <block type="text_print"></block>
+      <block type="text_charAt"></block>
     </category>
   </xml>
 
