--- a/blockly/demos/generator/index.html
+++ b/blockly/demos/generator/index.html
@@ -34,6 +34,10 @@
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
 
   <xml id="toolbox" style="display: none">
+    <category name="AutoCar">
+      <block type="move_forward"></block>
+      <block type="backward"></block>
+    </category>
     <category name="Wifi">
       <block type="Connect_to_Server"></block>
       <block type="recv_device"></block>
